math-core/src/snapshots/math_core__parse__tests__big_paren.snap
---
source: math-core/src/parse.rs
expression: "\\big("
---
[
  SizedParen(Scale1, StretchableOp('(', Always)),
]
