math-core/src/snapshots/math_core__parse__tests__boldsymbol_greek_var.snap
---
source: math-core/src/parse.rs
expression: "\\boldsymbol{\\Gamma\\varGamma}"
---
[
  TextTransform(
    tf: Transform(BoldItalic),
    content: Row(
      nodes: [
        SingleLetterIdent('Γ', true),
        SingleLetterIdent('Γ', false),
      ],
      attr: None,
    ),
  ),
]
