math-core/src/snapshots/math_core__parse__tests__colon_fusion_in_subscript.snap
---
source: math-core/src/parse.rs
expression: "x_:\\equiv, x_:="
---
[
  Subscript(
    target: SingleLetterIdent('x', false),
    symbol: OperatorWithSpacing(
      op: Op(':'),
      left: Some(FourMu),
      right: Some(FourMu),
    ),
  ),
  Operator(Op('≡'), None),
  Operator(Op(','), None),
  Subscript(
    target: SingleLetterIdent('x', false),
    symbol: OperatorWithSpacing(
      op: Op(':'),
      left: Some(FourMu),
      right: Some(FourMu),
    ),
  ),
  Operator(Op('='), None),
]
