math-core/src/snapshots/math_core__parse__tests__comment.snap
---
source: math-core/src/parse.rs
expression: "\\text{% comment}\n\\%as}"
---
[
  Text("\u{a0}%as"),
]
