math-core/src/snapshots/math_core__parse__tests__displaystyle_ended_by_right.snap
---
source: math-core/src/parse.rs
expression: "\\left(\\displaystyle \\int\\right)\\int"
---
[
  Fenced(
    style: None,
    open: Fence('(', false, Always),
    close: Fence(')', false, Always),
    content: Row(
      nodes: [
        Operator(
          op: Op('∫'),
          attr: None,
          left: None,
          right: None,
        ),
      ],
      attr: Style(DisplayStyle),
    ),
  ),
  Operator(
    op: Op('∫'),
    attr: None,
    left: None,
    right: None,
  ),
]
