math-core/src/snapshots/math_core__parse__tests__double_prime.snap
---
source: math-core/src/parse.rs
expression: "f''"
---
[
  Superscript(
    target: IdentifierChar('f', Default),
    symbol: Operator(
      op: Op('″'),
      attr: None,
      left: None,
      right: None,
    ),
  ),
]
