math-core/src/snapshots/math_core__parse__tests__frac_with_subscript.snap
---
source: math-core/src/parse.rs
expression: "\\frac12_x"
---
[
  Subscript(
    target: Frac(
      num: Number("1"),
      denom: Number("2"),
      lt_value: LengthValue(NaN),
      lt_unit: Px,
      attr: None,
    ),
    symbol: SingleLetterIdent('x', false),
  ),
]
