math-core/src/snapshots/math_core__parse__tests__genfrac.snap
---
source: math-core/src/parse.rs
expression: "\\genfrac(){1pt}{0}{1}{2}"
---
[
  Fenced(
    style: Some(DisplayStyle),
    open: ParenOp('(', false, Always),
    close: ParenOp(')', false, Always),
    content: Frac(
      num: Number("1"),
      denom: Number("2"),
      lt_value: 0.1,
      lt_unit: Rem,
      attr: None,
    ),
  ),
]
