math-core/src/snapshots/math_core__parse__tests__int_bounds_relation.snap
---
source: math-core/src/parse.rs
expression: "{\\int_0^\\infty = 4}"
---
[
  Row(
    nodes: [
      SubSup(
        target: Operator(
          op: '∫',
          attr: None,
          left: Some(Zero),
          right: Some(Zero),
        ),
        sub: Number("0"),
        sup: IdentifierChar('∞', Default),
      ),
      Operator(
        op: '=',
        attr: None,
        left: None,
        right: None,
      ),
      Number("4"),
    ],
    attr: None,
  ),
]
